--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="container">
-        <nav>Navbar</nav>
+        <nav>Pacheco</nav>
 
         <div class="main">
             <div class="light">
